<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context="com.example.joannahulek.mybabyfeeder.activities.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/meal_type_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:src="@drawable/bottle" />

        <LinearLayout
            android:id="@+id/capacity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/capacity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capacity"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/capacity_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

            <TextView
                android:id="@+id/capacity_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ml" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/duration_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"

                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/duration_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

            <TextView
                android:id="@+id/duration_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[min]" />
        </LinearLayout>


        <EditText
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_and_date" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_button"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_meal"
        android:id="@+id/add_meal_button"
        android:textAppearance="?android:textAppearanceMedium"
        />

</RelativeLayout>
